--- a/src/smfc.conf
+++ b/src/smfc.conf
@@ -41,9 +41,14 @@ max_temp=80.0
 min_level=20
 # Maximum CPU fan level (int, %, default=100)
 max_level=100
+# Relative target temperature (float, [0.0..1.0], default=0.3)
+# Below this threshold, minimum fan speed is applied
+# rel_target=0.0 means min_temp; rel_target=1.0 means max_temp
+rel_target=0.3
 # List of strings to specify IPMI sensors for this controller
 # Entries can be partial, e.g. 'CPU' will match 'CPU0' and 'CPU1'
 sensor_spec=CPU
+            VRM
 
 [HD zone]
 # Fan controller enabled (bool, default=0)
@@ -69,17 +74,20 @@ max_temp_hdd=45.0
 # Minimum SSD temperature (float, C, default=30.0)
 min_temp_ssd=30.0
 # Maximum SSD temperature (float, C, default=70.0)
-max_temp_ssd=70.0
+max_temp_ssd=60.0
 # Minimum HD fan level (int, %, default=35)
 min_level=20
 # Maximum HD fan level (int, %, default=100)
 max_level=100
+# Relative target temperature (float, [0.0..1.0], default=0.3)
+# Below this threshold, minimum fan speed is applied
+# rel_target=0.0 means min_temp; rel_target=1.0 means max_temp
+rel_target=0.3
 # List of strings to specify IPMI sensors for this controller
 # Entries can be partial, e.g. 'NVMe' will match 'M2NVMeSSD Temp1'
 # This list can also be empty, as all disk drives found on the system are also used
 # for this controller.
-sensor_spec=VRM
-            DIMM
+sensor_spec=DIMM
             PCH
             Peripheral
             System
