Ability to send SIGINT to service to stop it

--- a/src/samples/smfc.H11SSL-i.conf
+++ b/src/samples/smfc.H11SSL-i.conf
@@ -21,6 +21,14 @@ swapped_zones=1
 # Enable this for some Supermicro X9 boards like the X9DRi-F
 # They use a different IPMI command to set fan speeds
 impi_alternate_mode=0
+# Enable this to use the IPMI FULL fan mode as a base fan mode
+# (eg. switch to FULL fan mode and then change fan speed from there).
+# This is needed on most boards.
+# If the service is gracefully shut down, the original fan mode will
+# get re-applied. If it is shut down forcefully, it stays in FULL fan
+# mode. If this is disabled, smfc tries to adjust fan speeds with
+# whatever fan mode is set through the IPMI (which may or may not work).
+use_impi_full_fan_mode=0
 
 [CPU zone]
 # Fan controller enabled (bool, default=0)
@@ -30,7 +38,7 @@ temp_calc=2
 # Discrete steps in mapping of temperatures to fan level (int, default=6)
 steps=8
 # Threshold in temperature change before the fan controller reacts (float [0.0..1.0], default=0.05)
-sensitivity=0.05
+sensitivity=0.1
 # Polling time interval for reading temperature (int, sec, default=2)
 polling=10
 # Minimum IPMI sensor temperature override (float, C, default=None)
@@ -58,7 +66,7 @@ temp_calc=2
 # Discrete steps in mapping of temperatures to fan level (int, default=4)
 steps=12
 # Threshold in temperature change before the fan controller reacts (float [0.0..1.0], default=0.02)
-sensitivity=0.02
+sensitivity=0.05
 # Polling interval for reading temperature (int, sec, default=10)
 polling=30
 # Try to parse temperature limits from IPMI/SMART data (bool, default=0) [EXPERIMENTAL]
