--- a/src/samples/smfc.X9DRi-F.conf
+++ b/src/samples/smfc.X9DRi-F.conf
@@ -23,6 +23,14 @@ swapped_zones=1
 # Enable this for some Supermicro X9 boards like the X9DRi-F
 # They use a different IPMI command to set fan speeds
 impi_alternate_mode=1
+# Enable this to use the IPMI FULL fan mode as a base fan mode
+# (eg. switch to FULL fan mode and then change fan speed from there).
+# This is needed on most boards.
+# If the service is gracefully shut down, the original fan mode will
+# get re-applied. If it is shut down forcefully, it stays in FULL fan
+# mode. If this is disabled, smfc tries to adjust fan speeds with
+# whatever fan mode is set through the IPMI (which may or may not work).
+use_impi_full_fan_mode=1
 
 [CPU zone]
 # Fan controller enabled (bool, default=0)
